HelloUltraviolet/Fixtures/RejectedSource/Procedures/BehavioralSubtypingLiskov/Expected.uv
//! Expected diagnostic metadata for the BehavioralSubtypingLiskov rejected-source specimen.

expectedDiagnostic("E-SEM-2803", "req.15.BehavioralSubtypingLiskovRequirement")
